--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,8 @@ knitr::opts_chunk$set(
 
 # News
 
+- Watch the [useR! 2020 presentation](https://www.youtube.com/watch?v=p3dfHj6ki68) for a quick introduction on sensemakr.
+
 - Check out the [software paper preprint](https://www.researchgate.net/publication/340965014_sensemakr_Sensitivity_Analysis_Tools_for_OLS_in_R_and_Stata)!
 
 - Check out the new [Stata version](https://github.com/resonance1/sensemakr-stata) of the package!
@@ -43,7 +45,11 @@ knitr::opts_chunk$set(
 For theoretical details, [please see the JRSS-B paper](https://www.researchgate.net/publication/322509816_Making_Sense_of_Sensitivity_Extending_Omitted_Variable_Bias). 
 
 
-For a practical introduction, [please see the software paper](https://www.researchgate.net/publication/340965014_sensemakr_Sensitivity_Analysis_Tools_for_OLS_in_R_and_Stata) or [see the package vignettes](http://carloscinelli.com/sensemakr/articles/sensemakr.html).
+For a practical introduction, [please see the software paper](https://www.researchgate.net/publication/340965014_sensemakr_Sensitivity_Analysis_Tools_for_OLS_in_R_and_Stata) or [see the package vignettes](http://carloscinelli.com/sensemakr/articles/sensemakr.html). 
+
+For a quick start, watch the 15 min tutorial on sensitivity analysis using sensemakr prepared for useR! 2020:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/p3dfHj6ki68" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 # CRAN
