--- a/README.Rmd
+++ b/README.Rmd
@@ -110,11 +110,19 @@ plot(sensitivity)
 # plot bias contour of t-value
 plot(sensitivity, sensitivity.of = "t-value")
 
+# plot bias contour of lower limit of confidence interval
+plot(sensitivity, sensitivity.of = "ll")
+
 # plot extreme scenario
 plot(sensitivity, type = "extreme")
 
 # latex code for sensitivity table
 ovb_minimal_reporting(sensitivity)
+```
+
+```{r results='asis'}
+# html code for sensitivity table
+ovb_minimal_reporting(sensitivity, format = "pure_html")
 ```
 
 
